[package]
name = "mini-rxtx"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
license = "GPL-1.0-only"

[dependencies]
nb = "0.1.0"
ssmarshal = {version="1.0", default-features=false}
byteorder = { version = "1", default-features = false }
heapless = "0.4"
embedded-hal = "0.2.0"
serde = {version="1.0", default-features = false }

[dev-dependencies]
serde_derive = "1.0"

[features]
std = ["ssmarshal/std"]
