[package]
name = "msectrax-comms"
description = "Common definitions shared between host and firmware."
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition="2018"
license = "GPL-1.0-only"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"

[dev-dependencies]
ssmarshal = {version="1.0", default-features=false}
quickcheck = "0.8"
rand = "0.6.3"
