[package]
name = "msectrax-firmware"
description = "The app that runs on the msectrax device, based on the STM32 Nucleo platform."
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "GPL-1.0-only"
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.11"
cortex-m-rtfm = "0.5.1"
panic-halt = "0.2"
nb = "0.1.0"
embedded-hal = "0.2.3"
stm32f1xx-hal = {version="0.5", features=["rt", "stm32f103"]}
mini-rxtx = {path="../mini-rxtx"}
msectrax-comms = {path="../msectrax-comms"}
dac714 = {path="../dac714"}

[profile.release]
lto = true
debug = true
opt-level = "s"
