[package]
name = "msectrax-proxy"
description = "Run a HTTP server which proxies the msectrax device."
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "GPL-1.0-only"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.5"
structopt="0.2"
serialport = "3"
bytes = "0.4"
byteorder = "1"
mini-rxtx = {path="../mini-rxtx", features=["std"]}
crossbeam-channel = "0.3"
thread-control = "0.1"
parking_lot = "0.7"
futures = "0.1"
actix = "0.7"
actix-web = "0.7"
serde_json = "1.0"

msectrax-comms = {path="../msectrax-comms"}
