[package]
name = "msectrax-bui-frontend"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "GPL-1.0-only"
edition = "2018"

[dependencies]
yew = "0.7"
stdweb = "0.4.18"
serde = {version = "1.0", default-features = false}
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
failure = "0.1"
http = "0.1"
yew-tincture = {path="../../yew-tincture"}

msectrax-comms = {path="../../msectrax-comms"}

# An empty workspace array
[workspace]
